--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,6 +40,14 @@ button:hover {
   text-align: center;
 }
 
+.containerTwo {
+  margin: 0 auto;
+  max-width: 100%;
+  height: 100vh;
+  overflow: auto;
+  text-align: center;
+}
+
 .form {
   align-items: center;
   display: flex;
