updated tables in GameDetails component to mui style tables, and changed the NavBar background color

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -42,7 +42,7 @@ button:hover {
 
 .containerTwo {
   margin: 0 auto;
-  max-width: 100%;
+  max-width: 100vh;
   height: 100vh;
   overflow: auto;
   text-align: center;
