--- a/frontend/src/pages/MatchupsPage/MatchupsPage.css
+++ b/frontend/src/pages/MatchupsPage/MatchupsPage.css
@@ -1,10 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&display=swap');
+
+
+
+
 .matchup{
-    border: 2px solid blue;
-    
+    border: 2px solid #2C3531;
+    border-radius: 2em;
 }
 
 .matchup p{
-    color: black;
-    
+    color: #2C3531;
+    font-family: 'PT Serif', serif;
 }
 
