--- a/frontend/src/pages/MatchupsPage/MatchupsPage.css
+++ b/frontend/src/pages/MatchupsPage/MatchupsPage.css
@@ -1,15 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&display=swap');
 
 
-
-
 .matchup{
-    border: 2px solid #2C3531;
+    border: 2px solid #44318D;
     border-radius: 2em;
+    box-shadow: 0px 2px 4px 2px gray;
 }
 
 .matchup p{
-    color: #2C3531;
     font-family: 'PT Serif', serif;
+    color: black;
 }
 
+.matchup button {
+    font-size: 14px;
+    padding: 5px 2px;
+    border-radius: 4px;
+    border: 2px solid #44318D;
+    cursor: pointer;
+    color: red;
+}
