feat: updated to mvp

--- a/frontend/src/pages/MatchupsPage/MatchupsPage.css
+++ b/frontend/src/pages/MatchupsPage/MatchupsPage.css
@@ -20,3 +20,9 @@
     cursor: pointer;
     color: red;
 }
+
+.matchup button:hover{
+    background: #44318D;
+    color: white;
+    cursor: pointer;
+}
