Changed button colors to match the color scheme of the application

--- a/frontend/src/pages/MatchupsPage/MatchupsPage.css
+++ b/frontend/src/pages/MatchupsPage/MatchupsPage.css
@@ -18,7 +18,7 @@
     border-radius: 4px;
     border: 2px solid #44318D;
     cursor: pointer;
-    color: red;
+    color: #44318D;
 }
 
 .matchup button:hover{
